@@ -2,7 +2,7 @@ name             = SMS-Send-KR-CoolSMS
 author           = Keedi Kim - 김도형 <keedi@cpan.org>
 license          = Perl_5
 copyright_holder = Keedi Kim
-copyright_year   = 2013
+copyright_year   = 2014
 version          = 0.008
 
 ;[@Basic]
@@ -32,13 +32,13 @@ filename = README.mkd
 
 [Prereqs / RuntimeRequires]
 SMS::Send = 0
+IO::Socket::SSL = 1.84
 [Prereqs / TestRequires]
 [RemovePrereqs]
 remove = ExtUtils::MakeMaker
 remove = FindBin
 remove = strict
 remove = warnings
-remove = IO::Socket::SSL
 remove = SMS::Send::Driver
 
 [PodCoverageTests]
